--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <form action="">
         <div class="calculadora">
             <div class="calculadora__display" id="display">
-                <div id="history-calculator">3,401</div>
+                <div id="history-calculator">
+                    <p id="history-text"></p>
+                </div>
                 <div id="value-current">
                     <p id="text-current"></p>
                 </div>
             </div>
             <div class="calculadora__teclado">
                 <button type="button" class="boton utilidades" id="borrar" onclick="limpiar();">C</button>
-                <button type="button" class="boton utilidades" id="parentesis" onclick="mostrar('(');">CE</button>
+                <button type="button" class="boton utilidades" id="parentesis" onclick="borrarUnValor();">CE</button>
                 <button type="button" class="boton utilidades" id="porcentaje" onclick="mostrar('%')">%</button>
                 <button type="button" class="boton dividir" id="operador" onclick="mostrar('/');">/</button>
                 <button type="button" class="boton" id="numero" onclick="mostrar(7);">7</button>
